; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/cache/extr_dns.c_addr_to_additional.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/cache/extr_dns.c_addr_to_additional.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_packed_rrset_key = type { i32 }
%struct.regional = type { i32 }
%struct.dns_msg = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ub_packed_rrset_key*, %struct.regional*, %struct.dns_msg*, i32)* @addr_to_additional to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addr_to_additional(%struct.ub_packed_rrset_key* %0, %struct.regional* %1, %struct.dns_msg* %2, i32 %3) #0 {
  %5 = alloca %struct.ub_packed_rrset_key*, align 8
  %6 = alloca %struct.regional*, align 8
  %7 = alloca %struct.dns_msg*, align 8
  %8 = alloca i32, align 4
  store %struct.ub_packed_rrset_key* %0, %struct.ub_packed_rrset_key** %5, align 8
  store %struct.regional* %1, %struct.regional** %6, align 8
  store %struct.dns_msg* %2, %struct.dns_msg** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.ub_packed_rrset_key*, %struct.ub_packed_rrset_key** %5, align 8
  %10 = load %struct.regional*, %struct.regional** %6, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @packed_rrset_copy_region(%struct.ub_packed_rrset_key* %9, %struct.regional* %10, i32 %11)
  %13 = load %struct.dns_msg*, %struct.dns_msg** %7, align 8
  %14 = getelementptr inbounds %struct.dns_msg, %struct.dns_msg* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 2
  %17 = load i32*, i32** %16, align 8
  %18 = load %struct.dns_msg*, %struct.dns_msg** %7, align 8
  %19 = getelementptr inbounds %struct.dns_msg, %struct.dns_msg* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = getelementptr inbounds i32, i32* %17, i64 %22
  store i32 %12, i32* %23, align 4
  %24 = icmp ne i32 %12, 0
  br i1 %24, label %25, label %38

25:                                               ; preds = %4
  %26 = load %struct.dns_msg*, %struct.dns_msg** %7, align 8
  %27 = getelementptr inbounds %struct.dns_msg, %struct.dns_msg* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %29, align 8
  %32 = load %struct.dns_msg*, %struct.dns_msg** %7, align 8
  %33 = getelementptr inbounds %struct.dns_msg, %struct.dns_msg* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* %35, align 8
  br label %38

38:                                               ; preds = %25, %4
  ret void
}

declare dso_local i32 @packed_rrset_copy_region(%struct.ub_packed_rrset_key*, %struct.regional*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
